Feat/met 6423 organisation redirects during enrichment (#723)
* MET-6423 Extract Organisation references for enrichment.

* MET-6423 Insert new organisation IDs in case they have changed during enrichment.

* MET-6423: Simplify dereferencing: redirects only handled during enrichment.

* MET-6423: Fix unit test.

* MET-6423 update unit tests and add coverage

* MET-6423 update unit test

---------

Co-authored-by: Jorge Ortiz <jorge.ortiz@europeana.eu>